--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
                 <div class="cert-card">
                     <div class="cert-icon">🎓</div>
                     <h3>ISC2 CC Certificate</h3>
+                    <p>International Information System Security Certification</p>
                     <a href="https://drive.google.com/file/d/1wCopSt-Zlgdr4EK52JjaupXckk7ie_sD/view?usp=sharing"
                         target="_blank" class="cert-link">View Certificate</a>
                 </div>
