--- a/index.html
+++ b/index.html
@@ -1399,7 +1399,7 @@
                                 integration/deployment
                                 pipelines</p>
                         </div>
-
+<!-- 
                         <div class="experience-card">
                             <div class="experience-header">
                                 <h3>Visiting Manager</h3>
@@ -1407,34 +1407,34 @@
                             </div>
                             <h4>Khoraak Khaana | F10 Markaz Islamabad</h4>
                             <p>Responsible for weekend operations management (Saturday & Sunday)</p>
-                        </div>
+                        </div> -->
 
-                        <div class="experience-card">
+                        <!-- <div class="experience-card">
                             <div class="experience-header">
                                 <h3>Cashier & Manager</h3>
                                 <span class="duration">2 Years</span>
                             </div>
                             <h4>ZAMO Shawarma | F10 Markaz Islamabad</h4>
                             <p>Managed daily operations, customer service, and financial transactions</p>
-                        </div>
+                        </div> -->
 
                         <div class="experience-card">
                             <div class="experience-header">
                                 <h3>Data Entry Operator</h3>
-                                <span class="duration">8 Months</span>
+                                <span class="duration">1.5 Year</span>
                             </div>
                             <h4>Torcia Academy | 6th Road</h4>
                             <p>Data management, record keeping, and administrative support</p>
                         </div>
 
-                        <div class="experience-card">
+                        <!-- <div class="experience-card">
                             <div class="experience-header">
                                 <h3>All-Rounder</h3>
                                 <span class="duration">1 Year</span>
                             </div>
                             <h4>Astore Inn Hotel & Restaurant | Gilgit Baltistan</h4>
                             <p>Multi-role position handling various operational responsibilities</p>
-                        </div>
+                        </div> -->
 
                         <div class="experience-card">
                             <div class="experience-header">
